--- a/application/auto/view/index/tool.html
+++ b/application/auto/view/index/tool.html
@@ -1,3 +1,3 @@
 <foreach name="tool" item="value" key="key">
-	<button class="layui-btn {$value.class}" data-type='{$value.name}' onclick='{$value.click}'>{$value.title}</button>
+	<button class="layui-btn {$value.class}" data-type='{$value.name}' onclick='{$value.click}'><i class="layui-icon">{$value.ico}</i>{$value.title}</button>
 </foreach>
