--- a/application/auto/view/index/tool_item_html.html
+++ b/application/auto/view/index/tool_item_html.html
@@ -1,3 +1,3 @@
 <foreach name="itemTool" item="value" key="key">
-	<a class="layui-btn layui-btn-xs {$value.class}" lay-event="{$value.name}">{$value.title}</a>
+	<a class="layui-btn layui-btn-xs {$value.class}" lay-event="{$value.name}"><i class="layui-icon">{$value.ico}</i>{$value.title}</a>
 </foreach>
