增加了一个刷新表格的函数, 方便后台调用

--- a/application/auto/view/index/index.html
+++ b/application/auto/view/index/index.html
@@ -167,6 +167,11 @@
 			});
 		});
 
+		//刷新表格
+		function tableReload(){
+			$('#layer-reload').change();
+		}
+
 		/**
 		 * 从数据json中获取所有id, 格式为1,2,3
 		 * @param json
