--- a/application/auto/view/switch/edit/form.html
+++ b/application/auto/view/switch/edit/form.html
@@ -1,57 +1,76 @@
-<foreach name="editShow" item="value" key="key">
-	<php>$value = $field[$value];</php>
-	<php>$verify = $value->isRequired ? 'required' : '';</php>
-	<php>$type = $value->type;</php>
-	<php>$atValue = $info[$value->name];</php>
-	<switch name="$type">
-		<case value=":$Item::ID">
-			<input type="hidden" name="{$value->name}" value="{$atValue}">
-		</case>
-		<case value=":$Item::STRING">
-			<div class="layui-form-item">
-				<label class="layui-form-label">{$value->title}</label>
-				<div class="layui-input-block">
-					<input type="text" name="{$value->name}" lay-verify="{$verify}" autocomplete="off" placeholder="{$value->remark}" class="layui-input" value="{$atValue}">
-				</div>
+<switch name="$type">
+	<case value=":$Item::ID">
+		<input type="hidden" name="{$value->name}" value="{$atValue}">
+	</case>
+	<case value=":$Item::STRING">
+		<div class="layui-form-item">
+			<label class="layui-form-label">
+				{$value->title}
+				<notempty name="$value:remark">
+					<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+				</notempty>
+			</label>
+			<div class="layui-input-block">
+				<input type="text" name="{$value->name}" lay-verify="{$verify}" autocomplete="off" placeholder="{$value->remark}" class="layui-input" value="{$atValue}">
 			</div>
-		</case>
+		</div>
+	</case>
 
-		<case value=":$Item::SW">
-			<div class="layui-form-item">
-				<label class="layui-form-label">{$value->title}</label>
-				<div class="layui-input-block">
-					<include file='auto@format/sw' item="value" value="atValue" verify="{$verify}"/>
-				</div>
+	<case value=":$Item::SW">
+		<div class="layui-form-item">
+			<label class="layui-form-label">
+				{$value->title}
+				<notempty name="$value:remark">
+					<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+				</notempty>
+			</label>
+			<div class="layui-input-inline">
+				<include file='auto@format/select' item="value" value="atValue" verify="{$verify}"/>
 			</div>
-		</case>
+		</div>
+	</case>
 
-		<case value=":$Item::INT">
-			<div class="layui-form-item">
-				<label class="layui-form-label">{$value->title}</label>
-				<div class="layui-input-block">
-					<input type="text" name="{$value->name}" lay-verify="{$verify}" autocomplete="off" placeholder="{$value->remark}" class="layui-input" value="{$atValue}">
-				</div>
+	<case value=":$Item::INT">
+		<div class="layui-form-item">
+			<label class="layui-form-label">
+				{$value->title}
+				<notempty name="$value:remark">
+					<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+				</notempty>
+			</label>
+			<div class="layui-input-block">
+				<input type="text" name="{$value->name}" lay-verify="{$verify}" autocomplete="off" placeholder="{$value->remark}" class="layui-input" value="{$atValue}">
 			</div>
-		</case>
+		</div>
+	</case>
 
-		<case value=":$Item::SELECT">
-			<div class="layui-form-item">
-				<label class="layui-form-label">{$value->title}</label>
-				<div class="layui-input-inline">
-					<include file='auto@format/select' item="value" value="atValue"  verify="{$verify}"/>
-				</div>
+	<case value=":$Item::SELECT">
+		<div class="layui-form-item">
+			<label class="layui-form-label">
+				{$value->title}
+				<notempty name="$value:remark">
+					<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+				</notempty>
+			</label>
+			<div class="layui-input-inline">
+				<include file='auto@format/select' item="value" value="atValue"  verify="{$verify}"/>
 			</div>
-		</case>
+		</div>
+	</case>
 
-		<case value=":$Item::TIME">
-			<div class="layui-form-item">
-				<label class="layui-form-label">验证日期</label>
-				<div class="layui-input-inline">
-					<include file='auto@format/time' value="atValue" verify="{$verify}"/>
-				</div>
+	<case value=":$Item::TIME">
+		<div class="layui-form-item">
+			<label class="layui-form-label">
+				{$value->title}
+				<notempty name="$value:remark">
+					<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+				</notempty>
+			</label>
+			<div class="layui-input-inline">
+				<include file='auto@format/time' value="atValue" verify="{$verify}"/>
 			</div>
-		</case>
+		</div>
+	</case>
 
-		<default />
-	</switch>
-</foreach>
+	<default />
+</switch>
