--- a/application/auto/view/format/time.html
+++ b/application/auto/view/format/time.html
@@ -1,15 +1,20 @@
 <if condition="'[value]' != '[val'.'ue]'">
 	<php>$__value = "[value]";</php>
-	<present name="$$__value">
-		<php>$__value = $$__value;</php>
-	</present>
+	<if condition="isset($$__value) or $$__value === null">
+		<empty name="$$__value">
+			<php>$__value = '';</php>
+			<else />
+			<php>$__value = $$__value;</php>
+		</empty>
+	</if>
 
 <else/>
-	<php>$__value = 0;</php>
+	<php>$__value = time();</php>
 </if>
 
 <if condition="'[item]' != '[it'.'em]'">
 	<php>$__item = "[item]";</php>
 </if>
 
-<input type="text" name="{$$__item->name}" placeholder="yyyy-MM-dd" lay-verify="[verify]" autocomplete="off" class="layui-input layui-date [class]" value="{$__value?:''}">
+<php>$time = $__value ? date('Y-m-d H:i:s', $__value) : '';</php>
+<input type="text" name="{$$__item->name}" placeholder="yyyy-MM-dd" lay-verify="[verify]" autocomplete="off" class="layui-input layui-date [class]" value="{$time}" readonly>
