修复了一个bug, 忘记把item设置到time控件里了

--- a/application/auto/view/switch/edit/form.html
+++ b/application/auto/view/switch/edit/form.html
@@ -67,7 +67,7 @@
 				</notempty>
 			</label>
 			<div class="layui-input-inline">
-				<include file='auto@format/time' value="atValue" verify="{$verify}"/>
+				<include file='auto@format/time' item="value" value="atValue" verify="{$verify}"/>
 			</div>
 		</div>
 	</case>
