--- a/application/auto/view/switch/edit/form.html
+++ b/application/auto/view/switch/edit/form.html
@@ -8,7 +8,7 @@
 			</notempty>
 		</label>
 		<div class="layui-input-block">
-			{:widget(reset($value->html), ['value'=>$atValue, 'args'=>next($value->html)])}
+			{:widget(reset($value->html), ['value'=>$atValue?:'', 'args'=>next($value->html)])}
 		</div>
 	</div>
 <else/>
