--- a/application/auto/view/switch/index/table_special.html
+++ b/application/auto/view/switch/index/table_special.html
@@ -24,7 +24,7 @@
 
 			<case value=":$Item::TIME">
 				<!--时间单元格-->
-				{{new Date(d.{$value->name}*1000).toLocaleString()}}
+				{{new Date(d.{$value->name}*1000).toLocaleString().replace(/年|月/g, "-").replace(/日/g, " ").replace(/上午|下午/, "")}}
 			</case>
 		</switch>
 	</script>
