--- a/application/auto/view/switch/edit/form.html
+++ b/application/auto/view/switch/edit/form.html
@@ -1,9 +1,10 @@
 <php>$isSetHtml = $value->checkHtml();</php>
+<php>$remark = $value->remark;</php>
 <if condition="$isSetHtml">
 	<div class="layui-form-item">
 		<label class="layui-form-label">
 			{$value->title}
-			<notempty name="$value:remark">
+			<notempty name="$remark">
 				<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 			</notempty>
 		</label>
@@ -20,7 +21,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">
 					{$value->title}
-					<notempty name="$value:remark">
+					<notempty name="$remark">
 						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 					</notempty>
 				</label>
@@ -34,7 +35,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">
 					{$value->title}
-					<notempty name="$value:remark">
+					<notempty name="$remark">
 						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 					</notempty>
 				</label>
@@ -48,7 +49,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">
 					{$value->title}
-					<notempty name="$value:remark">
+					<notempty name="$remark">
 						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 					</notempty>
 				</label>
@@ -62,7 +63,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">
 					{$value->title}
-					<notempty name="$value:remark">
+					<notempty name="$remark">
 						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 					</notempty>
 				</label>
@@ -76,7 +77,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">
 					{$value->title}
-					<notempty name="$value:remark">
+					<notempty name="$remark">
 						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
 					</notempty>
 				</label>
