--- a/application/auto/view/switch/edit/form.html
+++ b/application/auto/view/switch/edit/form.html
@@ -59,6 +59,22 @@
 			</div>
 		</case>
 
+		<case value=":$Item::CONTENT">
+			<div class="layui-form-item">
+				<label class="layui-form-label">
+					{$value->title}
+					<notempty name="$remark">
+						<i class="layui-icon i-tips tips-{$value->name}" i-message="{$value->remark}" i-tips-class="tips-{$value->name}">&#xe60b;</i>
+					</notempty>
+				</label>
+				<div class="layui-input-block">
+					<php>$atName = $value->name;</php>
+					<include file='common@public/input/editor' name="{$atName}" value="{$atValue}"/>
+					<include file='common@public/input/editor_js' name="{$atName}" />
+				</div>
+			</div>
+		</case>
+
 		<case value=":$Item::SELECT">
 			<div class="layui-form-item">
 				<label class="layui-form-label">
