--- a/application/common/view/public/input/editor_js.html
+++ b/application/common/view/public/input/editor_js.html
@@ -1,11 +1,10 @@
-<notpresent name="editor_js_css">
-	<link href="__PLUGIN__/editor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+<notpresent name="editor_js">
 	<script type="text/javascript" src="__PLUGIN__/editor/third-party/template.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="__PLUGIN__/editor/umeditor.config.js"></script>
 	<script type="text/javascript" charset="utf-8" src="__PLUGIN__/editor/umeditor.min.js"></script>
 	<script type="text/javascript" src="__PLUGIN__/editor/lang/zh-cn/zh-cn.js"></script>
 </notpresent>
-<?php $editor_js_css = 1; ?>
+<?php $editor_js = 1; ?>
 
 <script type="text/javascript">
 	window.UMEDITOR_HOME_URL = '__PLUGIN__/editor/';
