新增了富翁本编辑器类型 同时设定了类型的css和js文件的引入方式

--- a/application/auto/view/edit/edit.html
+++ b/application/auto/view/edit/edit.html
@@ -1,5 +1,9 @@
 <extend name="auto@base"/>
 
+<block name="head">
+	<include file='auto@switch/edit/css' />
+</block>
+
 <block name="body">
 	<div class="wrapper-content gray-bg">
 		<div class="row wrapper white-bg">
@@ -29,6 +33,7 @@
 </block>
 
 <block name="foot">
+	<include file='auto@switch/edit/js' />
 	<script>
 		layui.use(['form', 'layedit', 'laydate'], function(){
 			var form = layui.form
