设置了sw格式的显示

--- a/application/auto/view/edit/editBatch.html
+++ b/application/auto/view/edit/editBatch.html
@@ -16,7 +16,7 @@
 					<php>$verify = '';</php>
 					<php>$type = $value->type;</php>
 					<php>$atValue = '';</php>
-					<include file='auto@switch/edit/form' />
+					<include file='auto@switch/edit/form' type="batch"/>
 				</foreach>
 
 				<div class="layui-form-item">
