--- a/application/auto/view/index/index.html
+++ b/application/auto/view/index/index.html
@@ -107,11 +107,11 @@
 				done: function(res, curr, count){		//渲染结束后的操作
 					//如果是异步请求数据方式，res即为你接口返回的信息。
 					//如果是直接赋值的方式，res即为：{data: [], count: 99} data为当前页数据、count为数据总长度
-					console.log(res);
+//					console.log(res);
 					//得到当前页码
-					console.log(curr);
+//					console.log(curr);
 					//得到数据总量
-					console.log(count);
+//					console.log(count);
 				},
 				loading:true
 			});
