--- a/application/auto/view/index/index.html
+++ b/application/auto/view/index/index.html
@@ -86,6 +86,25 @@
 			</div>
 		</div>
 	</div>
+
+	<foreach name="widget" item="value" key="key">
+		<br>
+		<fieldset class="layui-elem-field layui-field-title" style="margin-top: 40px">
+			<legend>{$key}</legend>
+		</fieldset>
+		{:widget($value.widget, $value.args)}
+	</foreach>
+	
+	
+	<foreach name="stat" item="value" key="key">
+		<br>
+		<fieldset class="layui-elem-field layui-field-title" style="margin-top: 40px">
+			<legend>{$key}</legend>
+		</fieldset>
+		<foreach name="value" item="sValue" key="sKey">
+		    <div>{$sValue} => {$sKey}</div>
+		</foreach>
+	</foreach>
 </block>
 
 <block name="foot">
