--- a/application/auto/view/switch/index/search.html
+++ b/application/auto/view/switch/index/search.html
@@ -64,7 +64,7 @@
 					<label class="layui-form-label">
 						{$value->title}
 					</label>
-					<div class="layui-input-inline">
+					<div class="layui-input-inline" style="margin-right: 0">
 						<input type="text" class="layui-input layui-data-range" name="{$value->name}" placeholder="开始 到 结束">
 					</div>
 				</div>
