优化了一下公用js文件, 放到了main模版中, 更加合理

--- a/application/common/view/public/js/main.html
+++ b/application/common/view/public/js/main.html
@@ -2,6 +2,7 @@
 <script src="__PLUGIN__/sweetalert/sweetalert.min.js"></script>
 <script src="__PLUGIN__/toastr/toastr.min.js"></script>
 <script src="__PLUGIN__/gritter/jquery.gritter.min.js"></script>
+<script src="__JSMAIN__"></script>
 
 <!--单选的样式-->
 <!--<script src="js/plugins/iCheck/icheck.min.js"></script>-->
