--- a/application/auto/view/index/index.html
+++ b/application/auto/view/index/index.html
@@ -16,6 +16,11 @@
 		input {
 			padding-right: 0!important;
 		}
+
+		#search-wrap{
+			position: relative;
+			z-index: 999;
+		}
 	</style>
 </block>
 
