--- a/application/auto/view/index/index.html
+++ b/application/auto/view/index/index.html
@@ -9,7 +9,7 @@
 		}
 
 
-		body > div {
+		.list-content {
 			margin-left: 1%;
 		}
 
@@ -37,7 +37,7 @@
 		</legend>
 	</fieldset>
 
-	<div class="layui-col-md12 layui-anim layui-anim-up hide" id="search-wrap">
+	<div class="layui-col-md12 layui-anim layui-anim-up hide list-content" id="search-wrap">
 		<div class="ibox-content">
 			<div class="layui-form-item">
 				<form method="get" class="layui-form" id="search">
@@ -72,7 +72,7 @@
 		<legend>数据列表</legend>
 	</fieldset>
 
-	<div class="layui-col-md12">
+	<div class="layui-col-md12 list-content">
 		<div class="ibox float-e-margins">
 			<div class="ibox-content">
 				<div class="layui-btn-group demoTable">
@@ -115,7 +115,8 @@
 		<fieldset class="layui-elem-field layui-field-title">
 			<legend>{$key}</legend>
 		</fieldset>
-		<div class="layui-row">
+
+		<div class="layui-row list-content">
 			<foreach name="value" item="sValue" key="sKey">
 				<div class="layui-inline layui-col-xs12 layui-col-md6">
 					<label class="layui-form-label">
@@ -127,7 +128,6 @@
 				</div>
 			</foreach>
 		</div>
-
 	</foreach>
 </block>
 
