所有页面不再单独使用base, 都统一继承auto的base文件

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -1,4 +1,4 @@
-<extend name="admin@base"/>
+<extend name="auto@base"/>
 
 <block name="head">
 	<link href="__PATH__/css/bootstrap.min.css" rel="stylesheet">
@@ -9,6 +9,7 @@
 	<style>
 		body{
 			height: 100%;overflow: hidden;
+			padding: 0;
 		}
 		.mini-navbar li.active > ul{
 
